2010-08-03  Xan Lopez  <xlopez@igalia.com>

Reviewed by Gustavo Noronha.

        [GTK] Fix DOM event dispatch
        https://bugs.webkit.org/show_bug.cgi?id=40847

        Add new files to the build.

        * GNUmakefile.am:

WebCore:

2010-08-03  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        [GTK] Fix DOM event dispatch
        https://bugs.webkit.org/show_bug.cgi?id=40847

        Bind UI and Mouse events and add ad-hoc kit method for WebCore
        Events.

        * GNUmakefile.am:
        * bindings/gobject/WebKitDOMBinding.cpp:
        (WebKit::kit):
        * bindings/gobject/WebKitDOMBinding.h:
        * bindings/gobject/WebKitDOMEventTarget.cpp:
        (WebKit::core):
        * bindings/gobject/WebKitDOMEventTargetPrivate.h: Added.
        * bindings/scripts/CodeGeneratorGObject.pm:

WebKit/gtk:

2010-08-03  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        [GTK] Fix DOM event dispatch
        https://bugs.webkit.org/show_bug.cgi?id=40847

        Test DOM event dispatch.

        * tests/testdomdomwindow.c:
        (load_event_callback):
        (test_dom_domview_signals):
        (clicked_cb):
        (load_status_callback):
        (test_dom_domview_dispatch_event):
        (main):

Canonical link: https://commits.webkit.org/55402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64580 268f45cc-cd09-0410-ab3c-d52691b4dbfc