WebCore/bindings/gobject/WebKitDOMBinding.h
@@ -29,12 +29,14 @@
 namespace WebCore {
 class Node;
 class Element;
+class Event;
 class EventTarget;
 } // namespace WebCore
 
 namespace WebKit {
 gpointer kit(WebCore::Node* node);
 gpointer kit(WebCore::Element* element);
+gpointer kit(WebCore::Event* event);
 gpointer kit(WebCore::EventTarget* target);
 
 class DOMObjectCache {
